# gaindalf

./: .gitignore  AGENTS.md  Justfile  README.md  TODO.md  pyproject.toml
backend/: database.py  main.py  models.py  seed.py
backend/routers/: analytics.py  lifts.py  muscle_groups.py  sets.py  settings.py  workouts.py
backend/services/: algorithm.py  indexes.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  home.js  lifts.js  utils.js  workouts.js
plans/: implementation.md  product.md
tests/: conftest.py  test_algorithm.py  test_analytics.py  test_indexes.py  test_lifts.py  test_models.py  test_muscle_groups.py  test_sets.py  test_settings.py  test_workouts.py
